# rt_ws

./: .gitignore  .gitmodules  build.sh  clean.sh  cspell.json  fastdds.xml  pyrightconfig.json  rg_setup.sh  rg_tb4_setup.sh  rg_xarm_setup.sh  rt_moveit2_setup.sh  rt_setup.sh
pm/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  dynamics_demo.py  fast_predict.py  predict_function.py  predict_states.py  preprocess_task0_data.py  project_summary.py  robot_dynamics.py  robot_prediction.py  simple_demo.py  state_predictor.py  test_analysis.py  test_with_data.py  urdf_parser.py
pm/task0/: task0_preprocess_data.py  task0_tcn.py  task0_urdf_parser.py
ros2/: 0-common.sh  1-update-src.sh  2-update-deps.sh  build.sh  clean.sh  dep-pkgs-to-install.txt  dep-pkgs.txt  distclean.sh  pkgs.repos
ros2/src/moveit_resources/panda_moveit_config/config/: gripper_moveit_controllers.yaml  kinematics.yaml  panda.srdf  panda_arm_hand.srdf.xacro  panda_hand.ros2_control.xacro  ros2_controllers.yaml
ros2/src/myisaacsim/: package.xml  setup.cfg
ros2/src/myisaacsim/myisaacsim/: simple_joint_command_publisher.py  simple_joint_state_logger.py
ros2/src/myteleop/: myteleop.py  package.xml
ros2/src/myteleop/codeql/: codeql-pack.yml  example.ql  get_db_files.ql  get_node_name.ql  update-db.sh
ros2/src/myturtlesim/: .clang-format
ros2/src/myturtlesim/include/myturtlesim/: turtle_frame.h
ros2/src/myturtlesim/launch/: myturtlesim_tf2_launch.py
ros2/src/myturtlesim/src/: turtle.cpp  turtle_tele_op_key.cpp
ros2/src/rt_nav2_bringup/: CMakeLists.txt  README.md
ros2/src/rt_nav2_bringup/launch/: localization_launch.py
ros2/src/rt_nav2_bt_navigator/: README.md
ros2/src/rt_nav2_bt_navigator/behavior_trees/: basic.xml
ros2/src/rt_nav2_bt_navigator/include/rt_nav2_bt_navigator/: bt_navigator.hpp  navigator.hpp
ros2/src/rt_nav2_bt_navigator/src/navigators/: navigate_to_pose.cpp
ros2/src/rt_nav2_controller/: README.md  package.xml
ros2/src/rt_tb4_navigation/: CMakeLists.txt  package.xml
ros2/src/rt_tb4_navigation/rt_tb4_navigation/: rt_tb4_navigator.py
ros2/src/task0/: package.xml  setup.cfg  setup.py
ros2/src/task0/task0/: logger.py
ros2/src/task1/launch/: carter_navigation.launch.py
scripts/: clang-tool  dock.sh  generate_llvm_ir.py  get_task_names.py  launch_myturtle_tf2.sh  nav.sh  rl.py  rt_nav.sh  save-map.sh  undock.sh
src/myisaacsim/: package.xml  setup.py
src/myisaacsim/launch/: task0.launch.py
src/myisaacsim/myisaacsim/: simple_joint_command_publisher.py
src/myteleop/: build.sh  package.xml  setup.cfg  setup.py
src/myteleop/codeql/: codeql-pack.lock.yml  get_dataflow_expr.ql  get_num_parameter.ql  get_topic_name.ql  run-query.sh
src/myteleop/utils/: data_flow_graph.dot  dataflow.py
src/myturtlesim/: CMakeLists.txt  build.sh  compile_commands.json  package.xml
src/myturtlesim/analysis/: runtime_checker.py
src/myturtlesim/include/myturtlesim/: turtle.h
src/myturtlesim/launch/: myturtlesim_launch.py  myturtlesim_scale_publisher_launch.py
src/myturtlesim/msg/: Scale.msg
src/myturtlesim/scripts/: get_log.sh  launch_myturtle_tf2.sh
src/myturtlesim/src/: myturtlesim.cpp  scale_publisher.cpp  turtle2_controller.cpp  turtle_frame.cpp  turtle_tf2_broadcaster.cpp  turtle_tf2_sensor.cpp
src/rt_nav2_bringup/: package.xml
src/rt_nav2_bringup/launch/: navigation_launch.py
src/rt_nav2_bt_navigator/: CMakeLists.txt  compile_commands.json  package.xml
src/rt_nav2_bt_navigator/include/rt_nav2_bt_navigator/navigators/: navigate_through_poses.hpp  navigate_to_pose.hpp
src/rt_nav2_bt_navigator/src/: bt_navigator.cpp  main.cpp
src/rt_nav2_bt_navigator/src/navigators/: navigate_through_poses.cpp
src/rt_nav2_controller/: CMakeLists.txt  compile_commands.json
src/rt_nav2_controller/src/: controller_server.cpp  main.cpp
src/rt_tb4_navigation/: README.md
src/rt_tb4_navigation/config/: nav2.yaml
src/rt_tb4_navigation/launch/: localization.launch.py  nav2.launch.py  slam.launch.py
src/task0/launch/: task0.launch.py
src/task0/task0/: logger.py
src/task1/: CMakeLists.txt  package.xml
src/utils/: package.xml  setup.py
src/utils/utils/: csv_logger.py
weekly/0506/: 0506.ipynb  heavy.csv  normal.csv
xarm/: lite6.conf  template.py  xarm_moveit.dot
xarm/scripts/: xarm_moveit.sh
xarm/xarm_humble/: 0-common.sh
xarm_humble/: 0-common.sh  3-install-deps.sh  dep-pkgs-to-install.txt  dep-pkgs.txt  distclean.sh
xarm_humble/patches/: xarm_ros2.patch
