<?xml version="1.0"?>
<package format="2">
  <name>myteleop</name>
  <version>1.0.0</version>
  <description>
    A robot-agnostic teleoperation node to convert keyboard commands to Twist messages.
  </description>

  <maintainer email="lz3450@outlook.com">KZL</maintainer>

  <license>BSD License 2.0</license>

  <author email="lz3450@outlook.com">KZL</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
