<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rt_tb4_navigation</name>
  <version>1.0.5</version>
  <description>RoboTrace Navigation</description>
  <maintainer email="lz3450@outlook.com">kzl</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>slam_toolbox</depend>
  <depend>rt_nav2_bringup</depend>
  <depend>nav2_simple_commander</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
